# dicomthings

./: .gitignore  README.md  pyproject.toml
dicomthings/: __init__.py  array.py  dicom.py  nifti.py  utils.py
