[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
 
[project]
name = "dicomtools"
authors = [
  { name="Jeroen Bertels", email="jeroen.bertels@gmail.com" },
]
description = "A Python library for working with DICOM files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/JeroenBertels/dicomtools"