[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "dicomthings"
authors = [
  {name="Jeroen Bertels", email="jeroen.bertels@gmail.com"},
]
description = "A Python library for working with DICOM files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "nibabel",
  "pydicom",
  "dicom2nifti",
  "niftithings",
  "iothings"
]

[project.urls]
"Homepage" = "https://github.com/JeroenBertels/dicomthings"
